# libs-gui

./: .cvsignore  .gitignore  .travis.yml  ANNOUNCE  BUGS  CODEOWNER  CODEOWNERS  ChangeLog  ChangeLog.2  ChangeLog.branch  FAQ  GNUmakefile  GNUmakefile.postamble  INSTALL  MISSING  Makefile  Makefile.in  Makefile.postamble  Makefile.sed.nt  NEWS  NOTES  POLICY_AI.md  README  README.md  STATUS  SUPPORT  TODO  Version  aclocal.m4  config.guess  config.mak.in  config.make.in  config.sub  configure  configure.ac  configure.bat  configure.in  gnustep-gui-debug.spec.in  gnustep-gui.spec  gnustep-gui.spec.in  (+5 more)
.github/scripts/: build.sh  dependencies.sh
.github/workflows/: main.yml
ColorPickers/: GNUmakefile  GSCMYKColorPicker.h  GSCMYKColorPicker.m  GSCMYKColorPicker.tiff  GSColorSliderCell.h  GSColorSliderCell.m  GSGrayColorPicker.h  GSGrayColorPicker.m  GSGrayColorPicker.tiff  GSHSBColorPicker.h  GSHSBColorPicker.m  GSHSBColorPicker.tiff  GSNamedColorPicker.m  GSNamedColorPicker.tiff  GSRGBColorPicker.h  GSRGBColorPicker.m  GSRGBColorPicker.tiff  GSStandardColorPicker.h  GSStandardColorPicker.m  GSWheelColorPicker.m
ColorPickers/German.lproj/: StandardPicker.strings
ColorPickers/Spanish.lproj/: StandardPicker.strings
Documentation/: .cvsignore  API-GAP-ANALYSIS.md  GNUmakefile  GNUmakefile.postamble  Gui.gsdoc  GuiAdditions.gsdoc  Makefile  Makefile.in  NSDataLinkDelegateCallbacks.md  ReleaseNotes.gsdoc  announce.texi  announce.tmpl.texi  faq.tmpl.texi  gnustep-gui.texi  gnustep-gui.texi.orig  gnustep-gui.tmpl.texi  gopen.1  install.texi  install.texi.orig  install.tmpl.texi  make_services.1  news.texi  news.tmpl.texi  readme.texi  readme.tmpl.texi  status.texi.orig  status.tmpl.texi  todo.texi  todo.tmpl.texi
Documentation/General/: GNUmakefile  OpenStepCompliance.gsdoc
Documentation/Gui/: .cvsignore  DefaultsSummary.gsdoc  GNUmakefile  Gui.gsdoc  LanguageSetup.gsdoc  NSCoderAdditions.gsdoc  NSMutableAttributedStringAdditions.gsdoc  NSMutableParagraphStyle.gsdoc
Documentation/GuiAdditions/: .cvsignore  GNUmakefile  GuiAdditions.gsdoc
Documentation/GuiUser/: DefaultsSummary.gsdoc  GNUmakefile  KeyboardSetup.gsdoc  LanguageSetup.gsdoc
Documentation/gsdoc/: AppKit.gsdoc  AppKit.html  DPSOperators.gsdoc  DPSOperators.html  DefaultsSummary.gsdoc  DefaultsSummary.html  GNUmakefile  GSDisplayServer.gsdoc  GSDisplayServer.html  GSHbox.gsdoc  GSHbox.html  GSTable.gsdoc  GSTable.html  GSVbox.gsdoc  GSVbox.html  Gui.gsdoc  Gui.html  Introduction.gsdoc  Introduction.html  NSActionCell.gsdoc  NSActionCell.html  NSAffineTransform.gsdoc  NSAffineTransform.html  NSApplication.gsdoc  NSApplication.html  NSAttributedString.gsdoc  NSAttributedString.html  NSAttributedStrngAdds.gsdoc  NSAttributedStrngAdds.html  NSBezierPath.gsdoc  NSBezierPath.html  NSBitmapImageRep.gsdoc  NSBitmapImageRep.html  NSBox.gsdoc  NSBox.html  NSBrowser.gsdoc  NSBrowser.html  NSBrowserCell.gsdoc  NSBrowserCell.html  (+205 more)
Examples/: NSDataLinkExample.m
Images/: GNUmakefile  GNUmakefile.postamble  GNUstep.tiff  GNUstepMenuImage.tiff  GNUstep_Images_Copyright  GSSearch.tiff  GSStop.tiff  Makefile  Makefile.in  Makefile.postamble  NSActionTemplate.tiff  NSAdvanced.tiff  NSCaution.tiff  NSColorPanel.tiff  NSFolder.tiff  NSFontPanelActionButton.tiff  NSFontPanelActionButtonPressed.tiff  NSInfo.tiff  NSPathTemplate.tiff  NSPreferencesGeneral.tiff  NSRatingLevelIndicator.tiff  NSStopProgressFreestandingTemplate.tiff  NSUserAccounts.tiff  README  common_2DCheckMark.tiff  common_3DArrowDown.tiff  common_3DArrowLeft.tiff  common_3DArrowRight.tiff  common_3DArrowRightH.tiff  common_3DArrowUp.tiff  common_ApplicationFolder.tiff  common_ArrowDown.tiff  common_ArrowDownH.tiff  common_ArrowLeft.tiff  common_ArrowLeftH.tiff  common_ArrowRight.tiff  common_ArrowRightH.tiff  common_ArrowUp.tiff  common_ArrowUpH.tiff  common_Close.tiff  (+64 more)
InputManagers/: GNUmakefile  StandardKeyBinding.dict  StandardKeyBinding.dict.gnustep
KeyBindings/: DefaultKeyBindings.dict  GNUmakefile
Model/: .cvsignore  Controller.h  Controller.m  GMAppKit.h  GMAppKit.m  GMArchiveObjects.m  GMArchiver.m  GNUmakefile  GNUmakefile.postamble  IBClasses.h  IBClasses.m  IMConnectors.h  IMConnectors.m  IMCustomObject.h  IMCustomObject.m  IMLoading.h  IMLoading.m  Translator.h  Translator.m  nib2gmodel.m  test.gmodel  test.m
Panels/: ColorPanel.gmodel  GNUmakefile  GNUmakefile.postamble  SavePanel.gmodel  SpellPanel.gmodel
PrinterTypes/: GNUmakefile  GNUmakefile.postamble  GSProlog.ps  Printers
Printing/: GNUmakefile
Resources/: GNUmakefile
Sounds/: GNUmakefile  GNUmakefile.postamble
Source/: #NSDockTile.m#  CompatibilityHeaders.make  DocMakefile  Functions.m  GNUAlertPanel.m  GNUServicesManager.m  GNUmakefile  GNUmakefile.postamble  GNUmakefile.preamble  GPSDrawContext.m  GSAVUtils.h  GSAVUtils.m  GSAnimator.m  GSAudioPlayer.h  GSAudioPlayer.m  GSAutoLayoutAnchorPrivate.h  GSAutoLayoutEngine.h  GSAutoLayoutEngine.m  GSAutoLayoutVFLParser.h  GSAutoLayoutVFLParser.m  GSAutocompleteWindow.h  GSAutocompleteWindow.m  GSBindingHelpers.h  GSCSConstraint.h  GSCSConstraint.m  GSCSConstraintOperator.h  GSCSEditInfo.h  GSCSEditInfo.m  GSCSEditVariableManager.h  GSCSEditVariableManager.m  GSCSFloatComparator.h  GSCSFloatComparator.m  GSCSLinearExpression.h  GSCSLinearExpression.m  GSCSSolution.h  GSCSSolution.m  GSCSStrength.h  GSCSStrength.m  GSCSTableau.h  GSCSTableau.m  (+418 more)
Testing/: .cvsignore  Functions.m  GNUmakefile  GNUmakefile.postamble  GNUmakefile.preamble  Makefile  Makefile.in  README  nsarchiver.m  testpb.m
Tests/: GNUmakefile
TextConverters/: GNUmakefile
Themes/: GNUmakefile  GNUmakefile.postamble
Tools/: .cvsignore  Functions.m  GNUmakefile  GNUmakefile.postamble  GNUmakefile.preamble  GSspell.m  GSspellInfo.plist  Makefile  Makefile.postamble  Makefile.preamble  dummy.m  example.m  exampleInfo.plist  gclose.m  gcloseall.m  gopen.m  gpbs.m  make_services.m  md5Digest.m  set_show_service.m
TouchBarExample/: GNUmakefile  TouchBarExample.m
trunk/: ANNOUNCE  BUGS  ChangeLog  GNUmakefile  INSTALL  NEWS  README  Version  configure  configure.ac
(+1934 files in other folders)
